# hlights

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  cabal.project  cabal.project.freeze  hlights.cabal
app/: GetAccessToken.hs  Main.hs
src/: Auth.hs  Dirigera.hs  Env.hs  Hlights.hs  Layout.hs  Logs.hs  Scheduler.hs  Storage.hs  Watch.hs
src/Dirigera/: Devices.hs
src/Pages/: Connection.hs  Counter.hs  Debug.hs  Home.hs  Schedule.hs
