cabal-version:      3.4
name:               hlights
version:            0.1.0.0
synopsis:           Dirigera lights control
-- description:
homepage:           https://github.com/fneu/hlights
license:            BSD-3-Clause
license-file:       LICENSE
author:             Fabian Neuschmidt
maintainer:         fabian@neuschmidt.de
-- copyright:
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall


common extensions
  default-extensions: OverloadedStrings
                    , RecordWildCards
                    , OverloadedRecordDot
                    , DuplicateRecordFields
                    , NoFieldSelectors

library
    import:           warnings
                    , extensions
    exposed-modules:  Auth,
                      Layout,
                      Storage,
                      Dirigera,
                      Dirigera.Devices,
                      Scheduler,
                      Env,
                      Pages.Home,
                      Pages.Connection,
                      Pages.Debug,
                      Pages.Schedule
    -- other-modules:
    -- other-extensions:
    build-depends:    base
                    , random
                    , cryptonite
                    , base64
                    , memory
                    , http-conduit
                    , bytestring
                    , yaml
                    , aeson
                    , connection
                    , hostname
                    , scotty
                    , lucid2
                    , lucid2-htmx
                    , sqlite-simple
                    , text
                    , transformers
                    , stm
                    , containers
                    , time
                    , http-types
                    , tz
                    , tzdata
    hs-source-dirs:   src
    default-language: GHC2021

executable hlights
    import:           warnings
                    , extensions
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        hlights,
        scotty,
        lucid2,
        lucid2-htmx,
        sqlite-simple,
        text,
        transformers,
        stm,
        containers

    hs-source-dirs:   app
    default-language: GHC2021
